--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
