--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "date-fns": "^2.29.3",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-circular-progressbar": "^2.1.0",
